--- a/backend/relatorio/src/main/resources/application.properties
+++ b/backend/relatorio/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+# Datasource Configutation
+spring.datasource.username=postgres
+spring.datasource.password=p0stgre$
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
