--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -70,6 +70,11 @@
 			<version>2.3.0</version>
 		</dependency>
 
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
