--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,2 @@
-# Datasource Configutation
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.jpa.hibernate.ddl-auto=update
+#OpenAPI Path - JSON format
+springdoc.api-docs.path=/api-docs
