criação dos classes para anexar arquivos

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,10 @@
 #OpenAPI Path - JSON format
 springdoc.api-docs.path=/api-docs
 
-#anexos.path=
+#Datasource configuration - H2 Embbeded
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
