--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-#OpenAPI Path - JSON format
-springdoc.api-docs.path=/api-docs
+#OpenAPI Path - Swagger
+springdoc.swagger-ui.path=/
 
-#Datasource configuration - H2 Embbeded
+#Datasource configuration - H2 Console
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=
